<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#EEEEEE">
    <TextView
        android:id="@+id/end_message"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <EditText
        android:id="@+id/minutes_input"
        android:hint="@string/minutes_hint"
        android:textSize="40sp"
        android:maxLength="2"
        android:digits="@string/digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/seconds_input"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/colon"
        android:text="@string/colon"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/seconds_input"
        app:layout_constraintLeft_toRightOf="@id/minutes_input"/>

    <EditText
        android:id="@+id/seconds_input"
        android:hint="@string/seconds_hint"
        android:textSize="40sp"
        android:maxLength="2"
        android:digits="@string/digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/minutes_input"/>

    <Button
        android:id="@+id/count_down_start_resume"
        android:text="@string/start"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/count_down_pause_clear"
        app:layout_constraintVertical_bias="0.8"/>
    <Button
        android:id="@+id/count_down_pause_clear"
        android:text="@string/pause"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/count_down_start_resume"
        app:layout_constraintVertical_bias="0.8"/>

</android.support.constraint.ConstraintLayout>